// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportManager Typescript Constructor (via provider) should add an import proxy for a default import 1`] = `
Array [
  NamedImport {
    "defaultAlias": "myDefaultExportedFunction",
    "end": 84,
    "libraryName": "../defaultExport/lateDefaultExportedElement",
    "specifiers": Array [],
    "start": 0,
  },
]
`;

exports[`ImportManager Typescript Constructor (via provider) should add an import proxy for a named import 1`] = `
Array [
  NamedImport {
    "end": 46,
    "libraryName": "../../server/indices",
    "specifiers": Array [
      SymbolSpecifier {
        "alias": undefined,
        "specifier": "Class1",
      },
    ],
    "start": 0,
  },
]
`;

exports[`ImportManager Typescript Constructor (via provider) should add multiple import proxies 1`] = `
Array [
  NamedImport {
    "defaultAlias": "myDefaultExportedFunction",
    "end": 84,
    "libraryName": "../defaultExport/lateDefaultExportedElement",
    "specifiers": Array [],
    "start": 0,
  },
  NamedImport {
    "end": 131,
    "libraryName": "../../server/indices",
    "specifiers": Array [
      SymbolSpecifier {
        "alias": undefined,
        "specifier": "Class1",
      },
    ],
    "start": 85,
  },
]
`;

exports[`ImportManager Typescript Constructor (via provider) should not add a proxy for a namespace import 1`] = `
Array [
  NamespaceImport {
    "alias": "bodyParser",
    "end": 42,
    "libraryName": "body-parser",
    "start": 0,
  },
]
`;

exports[`ImportManager Typescript Constructor (via provider) should not add a proxy for a string import 1`] = `
Array [
  StringImport {
    "end": 21,
    "libraryName": "body-parser",
    "start": 0,
  },
]
`;

exports[`ImportManager Typescript Constructor (via provider) should not add a proxy for an external import 1`] = `
Array [
  ExternalModuleImport {
    "alias": "bodyParser",
    "end": 43,
    "libraryName": "body-parser",
    "start": 0,
  },
]
`;

exports[`ImportManager Typescript addDeclarationImport() should add a default import to the import index. 1`] = `
Array [
  NamedImport {
    "defaultAlias": undefined,
    "end": 46,
    "libraryName": "../../server/indices",
    "specifiers": Array [
      SymbolSpecifier {
        "alias": undefined,
        "specifier": "Class1",
      },
    ],
    "start": 0,
  },
  NamedImport {
    "defaultAlias": "defaultdeclaration",
    "end": undefined,
    "libraryName": "../lib",
    "specifiers": Array [],
    "start": undefined,
  },
]
`;

exports[`ImportManager Typescript addDeclarationImport() should add a module import to the import index 1`] = `
Array [
  NamedImport {
    "defaultAlias": undefined,
    "end": 46,
    "libraryName": "../../server/indices",
    "specifiers": Array [
      SymbolSpecifier {
        "alias": undefined,
        "specifier": "Class1",
      },
    ],
    "start": 0,
  },
  NamespaceImport {
    "alias": "module",
    "end": undefined,
    "libraryName": "my-module",
    "start": undefined,
  },
]
`;

exports[`ImportManager Typescript addDeclarationImport() should add a normal import to a group 1`] = `
KeywordImportGroup {
  "imports": Array [
    NamedImport {
      "defaultAlias": undefined,
      "end": 46,
      "libraryName": "../../server/indices",
      "specifiers": Array [
        SymbolSpecifier {
          "alias": undefined,
          "specifier": "Class1",
        },
      ],
      "start": 0,
    },
  ],
  "keyword": 2,
  "order": "asc",
}
`;

exports[`ImportManager Typescript addDeclarationImport() should add a normal import to a group 2`] = `
KeywordImportGroup {
  "imports": Array [
    NamedImport {
      "defaultAlias": undefined,
      "end": 46,
      "libraryName": "../../server/indices",
      "specifiers": Array [
        SymbolSpecifier {
          "alias": undefined,
          "specifier": "Class1",
        },
      ],
      "start": 0,
    },
    NamedImport {
      "end": undefined,
      "libraryName": "../lib",
      "specifiers": Array [
        SymbolSpecifier {
          "alias": undefined,
          "specifier": "class",
        },
      ],
      "start": undefined,
    },
  ],
  "keyword": 2,
  "order": "asc",
}
`;

exports[`ImportManager Typescript addDeclarationImport() should add a normal import to the document 1`] = `
Array [
  NamedImport {
    "defaultAlias": undefined,
    "end": 46,
    "libraryName": "../../server/indices",
    "specifiers": Array [
      SymbolSpecifier {
        "alias": undefined,
        "specifier": "Class1",
      },
    ],
    "start": 0,
  },
  NamedImport {
    "end": undefined,
    "libraryName": "../lib",
    "specifiers": Array [
      SymbolSpecifier {
        "alias": undefined,
        "specifier": "classdeclaration",
      },
    ],
    "start": undefined,
  },
]
`;

exports[`ImportManager Typescript addDeclarationImport() should add an import to an existing import group 1`] = `
KeywordImportGroup {
  "imports": Array [
    NamedImport {
      "defaultAlias": undefined,
      "end": 46,
      "libraryName": "../../server/indices",
      "specifiers": Array [
        SymbolSpecifier {
          "alias": undefined,
          "specifier": "Class1",
        },
      ],
      "start": 0,
    },
  ],
  "keyword": 2,
  "order": "asc",
}
`;

exports[`ImportManager Typescript addDeclarationImport() should add an import to an existing import group 2`] = `
KeywordImportGroup {
  "imports": Array [
    NamedImport {
      "defaultAlias": undefined,
      "end": 46,
      "libraryName": "../../server/indices",
      "specifiers": Array [
        SymbolSpecifier {
          "alias": undefined,
          "specifier": "Class1",
        },
      ],
      "start": 0,
    },
    NamedImport {
      "end": undefined,
      "libraryName": "../lib1",
      "specifiers": Array [
        SymbolSpecifier {
          "alias": undefined,
          "specifier": "class",
        },
      ],
      "start": undefined,
    },
    NamedImport {
      "end": undefined,
      "libraryName": "../lib1",
      "specifiers": Array [
        SymbolSpecifier {
          "alias": undefined,
          "specifier": "class2",
        },
      ],
      "start": undefined,
    },
  ],
  "keyword": 2,
  "order": "asc",
}
`;

exports[`ImportManager Typescript addDeclarationImport() should add an import to an existing import index item 1`] = `
Array [
  NamedImport {
    "defaultAlias": undefined,
    "end": 46,
    "libraryName": "../../server/indices",
    "specifiers": Array [
      SymbolSpecifier {
        "alias": undefined,
        "specifier": "Class1",
      },
    ],
    "start": 0,
  },
  NamedImport {
    "end": undefined,
    "libraryName": "../lib1",
    "specifiers": Array [
      SymbolSpecifier {
        "alias": undefined,
        "specifier": "class1",
      },
    ],
    "start": undefined,
  },
  NamedImport {
    "end": undefined,
    "libraryName": "../lib1",
    "specifiers": Array [
      SymbolSpecifier {
        "alias": undefined,
        "specifier": "class2",
      },
    ],
    "start": undefined,
  },
]
`;

exports[`ImportManager Typescript addDeclarationImport() should add multiple imports to the import index 1`] = `
Array [
  NamedImport {
    "defaultAlias": undefined,
    "end": 46,
    "libraryName": "../../server/indices",
    "specifiers": Array [
      SymbolSpecifier {
        "alias": undefined,
        "specifier": "Class1",
      },
    ],
    "start": 0,
  },
  NamedImport {
    "end": undefined,
    "libraryName": "../lib1",
    "specifiers": Array [
      SymbolSpecifier {
        "alias": undefined,
        "specifier": "class1",
      },
    ],
    "start": undefined,
  },
  NamedImport {
    "end": undefined,
    "libraryName": "../lib2",
    "specifiers": Array [
      SymbolSpecifier {
        "alias": undefined,
        "specifier": "class2",
      },
    ],
    "start": undefined,
  },
]
`;

exports[`ImportManager Typescript addDeclarationImport() should not add the same specifier twice 1`] = `
Array [
  NamedImport {
    "defaultAlias": undefined,
    "end": 46,
    "libraryName": "../../server/indices",
    "specifiers": Array [
      SymbolSpecifier {
        "alias": undefined,
        "specifier": "Class1",
      },
    ],
    "start": 0,
  },
  NamedImport {
    "end": undefined,
    "libraryName": "../lib",
    "specifiers": Array [
      SymbolSpecifier {
        "alias": undefined,
        "specifier": "class",
      },
    ],
    "start": undefined,
  },
]
`;

exports[`ImportManager Typescript addDeclarationImport() should not add the same specifier twice 2`] = `
Array [
  NamedImport {
    "defaultAlias": undefined,
    "end": 46,
    "libraryName": "../../server/indices",
    "specifiers": Array [
      SymbolSpecifier {
        "alias": undefined,
        "specifier": "Class1",
      },
    ],
    "start": 0,
  },
  NamedImport {
    "end": undefined,
    "libraryName": "../lib",
    "specifiers": Array [
      SymbolSpecifier {
        "alias": undefined,
        "specifier": "class",
      },
    ],
    "start": undefined,
  },
  NamedImport {
    "end": undefined,
    "libraryName": "../lib",
    "specifiers": Array [
      SymbolSpecifier {
        "alias": undefined,
        "specifier": "class",
      },
    ],
    "start": undefined,
  },
]
`;

exports[`ImportManager Typescript commit() should add a single new import to the document top 1`] = `"import { importedclass } from '../imp';"`;
